# minidrive

./: .gitignore  README.md
client/src/: main.cpp
server/: CMakeLists.txt
server/include/: access_control.hpp  flow.hpp  session.hpp  simple_server.hpp
server/include/flows/: authenticate_flow.hpp  flow.hpp  upload_flow.hpp  upload_resume_flow.hpp
server/koren/: users.json
server/src/: access_control.cpp  flow.cpp  main.cpp  session.cpp  simple_server.cpp
server/src/flows/: authenticate_flow.cpp  flow.cpp  upload_flow.cpp  upload_resume_flow.cpp
server/src/session/: auth.cpp  download.cpp  resume.cpp  session.cpp  upload.cpp
shared/: CMakeLists.txt
shared/include/minidrive/: helpers.hpp  transfer_state.hpp
shared/src/: helpers.cpp  transfer_state.cpp
